[gd_scene load_steps=19 format=2]

[ext_resource path="res://installer.gd" type="Script" id=1]
[ext_resource path="res://installerb.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/Lato-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://bp.tres" type="StyleBox" id=4]
[ext_resource path="res://bh.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 50
anti_aliasing_size = 0.829

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.701961, 0.701961, 0.701961, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_size = 30
anti_aliasing_size = 4.499

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("bg/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg/fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "unfade"
tracks/0/type = "value"
tracks/0/path = NodePath("bg/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg/fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 20
outline_size = 2
outline_color = Color( 0.243137, 0.243137, 0.243137, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="installer" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 511, 300 )
scale = Vector2( 0.267187, 0.277778 )

[node name="fade" type="ColorRect" parent="bg"]
margin_left = -1935.0
margin_top = -1080.0
margin_right = 1931.0
margin_bottom = 1102.0
color = Color( 0, 0, 0, 0 )

[node name="pg" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 532.0
margin_right = 932.0
margin_bottom = 565.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="prog" type="Label" parent="pg"]
margin_right = 836.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 273.0
margin_top = 142.0
margin_right = 802.0
margin_bottom = 489.0
window_title = "Open a Directory"
dialog_text = "Game Dir"
mode = 2
access = 2
show_hidden_files = true

[node name="bgt" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )
anims/unfade = SubResource( 6 )

[node name="add" type="Button" parent="."]
margin_left = 287.0
margin_top = 480.0
margin_right = 728.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Install"

[node name="add2" type="Button" parent="."]
margin_left = 8.0
margin_top = 10.0
margin_right = 123.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Console"

[node name="add3" type="Button" parent="."]
margin_left = 891.0
margin_top = 9.0
margin_right = 1014.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Components"

[node name="error" type="WindowDialog" parent="."]
margin_left = 236.0
margin_top = 168.0
margin_right = 799.0
margin_bottom = 504.0
window_title = "Error"

[node name="content" type="Label" parent="error"]
margin_left = 3.0
margin_top = 4.0
margin_right = 561.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="name" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="console" type="WindowDialog" parent="."]
margin_left = 95.0
margin_top = 81.0
margin_right = 933.0
margin_bottom = 556.0
window_title = "Console"
resizable = true

[node name="ScrollContainer" type="ScrollContainer" parent="console"]
margin_left = 1.0
margin_top = -1.0
margin_right = 836.0
margin_bottom = 472.0
follow_focus = true

[node name="Container" type="AspectRatioContainer" parent="console/ScrollContainer"]
margin_bottom = 25.0

[node name="text" type="Label" parent="console/ScrollContainer/Container"]
margin_bottom = 25.0
custom_fonts/font = SubResource( 15 )

[node name="wait" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 188.0
margin_top = 276.0
margin_right = 858.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 11 )
text = "Please Wait The Installer Is Decompyling The Files
The Installer May Not Response But Dont Worry"
align = 1

[node name="game" type="Sprite" parent="."]
position = Vector2( 85, 477 )
scale = Vector2( 0.334, 0.34 )

[node name="gname" type="Label" parent="game"]
margin_left = -251.0
margin_top = 200.0
margin_right = 254.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 12 )
autowrap = true

[node name="productkey" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -207.0
margin_right = 342.0
margin_bottom = 220.0
window_title = "ProductKey"

[node name="key" type="LineEdit" parent="productkey"]
margin_left = 189.0
margin_top = 141.0
margin_right = 485.0
margin_bottom = 176.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
placeholder_text = "Produckey"
placeholder_alpha = 0.728

[node name="web" type="Button" parent="productkey"]
margin_left = 110.0
margin_top = 391.0
margin_right = 578.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 14 )
text = "https://beatrix-games.ga/html/keyg"

[node name="go" type="Button" parent="productkey"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -15.5
margin_right = 84.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 14 )
text = "Enter"

[node name="note" type="Label" parent="productkey"]
margin_left = 128.0
margin_top = 331.0
margin_right = 596.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 14 )
text = "You can Get One In My Website Dont Worry Its Free
Signup For Updated Licence"
align = 1
valign = 1

[node name="err" type="Label" parent="productkey"]
visible = false
margin_left = 108.0
margin_top = 106.0
margin_right = 576.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 14 )
text = "Product Key Doesnot Exist"
align = 1

[node name="hide" type="Timer" parent="productkey"]
wait_time = 3.0
one_shot = true

[node name="delay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="compo" type="WindowDialog" parent="."]
margin_left = 164.0
margin_top = 64.0
margin_right = 892.0
margin_bottom = 536.0
window_title = "Components"

[node name="note" type="Label" parent="compo"]
margin_left = 138.0
margin_top = 2.0
margin_right = 606.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 14 )
text = "Click The Components You Want To Install"
align = 1
valign = 1

[node name="dx" type="Button" parent="compo"]
margin_left = 7.0
margin_top = 76.0
margin_right = 103.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 14 )
text = "Direct X "

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="timeout" from="bgt" to="." method="_on_bgt_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="add2" to="." method="_on_add2_pressed"]
[connection signal="pressed" from="add3" to="." method="_on_add3_pressed"]
[connection signal="pressed" from="productkey/web" to="." method="_on_web_pressed"]
[connection signal="pressed" from="productkey/go" to="." method="_on_go_pressed"]
[connection signal="timeout" from="productkey/hide" to="." method="_on_hide_timeout"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
[connection signal="pressed" from="compo/dx" to="." method="_on_dx_pressed"]
